--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -8,14 +8,17 @@
 .form input[type="text"] {
   height: 40px;
   padding: 0 20px;
-  font-size: 20px;
+  font-size: 17px;
   border: 1px solid #fff;
+  position: relative;
+  outline: 0;
   border-radius: 10px 0px 0px 10px;
   min-width: 80%;
   box-shadow: -4px -4px 10px rgba(255, 255, 255, 1),
               inset 4px 4px 10px rgba(0, 0, 0, 0.05),
               inset -4px -4px 10px rgba(255, 255, 255, 1),
               4px 4px 10px rgba(0, 0, 0, 0.05);
+
 }
 
 .form button[type="submit"] {
