--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,21 @@
 
 body {
   font-family: sans-serif;
-  background-image: linear-gradient(to right, #a18cd1 0%, #fbc2eb 100%);
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px;
+  height: 100vh;
+  overflow: hidden;
+  background-color: #fa8bff;
+  background-image: linear-gradient(
+    45deg,
+    #fa8bff 0%,
+    #2bd2ff 52%,
+    #2bff88 90%
+  );
 }
 
 button {
