--- a/src/components/Tarefas/Tarefas.css
+++ b/src/components/Tarefas/Tarefas.css
@@ -1,9 +1,11 @@
 .tarefas {
   margin-top: 30px;
+  max-height: 60vh;
+  overflow: auto;
 }
 
 .tarefas li {
-  color: #C08497;
+  color: #c08497;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -11,7 +13,7 @@
 }
 
 .tarefas li:hover {
-  background: #D8DCFF;
+  background: #d8dcff;
   transition-duration: 0.4s;
   border-radius: 5px;
 }
